Basic Correlogram Legend.

--- a/scenicView.properties
+++ b/scenicView.properties
@@ -1,19 +1,19 @@
 #ScenicView properties
-#Mon Mar 17 16:28:19 CET 2014
+#Thu Apr 03 16:20:15 CEST 2014
 showDefaultProperties=true
 autoRefreshStyleSheets=false
 showBounds=true
 ignoreMouseTransparentNodes=true
-splitPaneDividerPosition=0.5009433962264151
+splitPaneDividerPosition=0.5
 collapseControls=true
 showFilteredNodesInTree=true
 showCSSProperties=false
-collapseContainerControls=false
 showInvisibleNodes=false
-lastVersionCheck=17032014
+collapseContainerControls=false
 showNodesIdInTree=false
-automaticScenegraphStructureRefreshing=true
+lastVersionCheck=03042014
 registerShortcuts=true
-stageWidth=1062.0
+automaticScenegraphStructureRefreshing=true
 stageHeight=778.0
+stageWidth=1276.0
 showBaseline=false
